[project]
name = ""
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = ""
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AIT"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

