[project]
name = "ComfyUI-HeresyNodes"
description = "Support nodes for my workflows. File management, video generation"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/heresyCoder/ComfyUI-HeresyNodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "heresycoder"
DisplayName = "ComfyUI-HeresyNodes"
Icon = "⛧"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility